{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 406,
  "lineage": "790723c7-b8c3-9461-b16d-0737508180ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mhnd-eb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094c17331b2534001",
            "arn": "arn:aws:ec2:eu-west-2:252530817577:elastic-ip/eipalloc-094c17331b2534001",
            "association_id": "eipassoc-06f8cd03ccd20b348",
            "domain": "vpc",
            "id": "eipalloc-094c17331b2534001",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-05eeef2a891618c4b",
            "private_dns": "ip-10-0-10-32.eu-west-2.compute.internal",
            "private_ip": "10.0.10.32",
            "public_dns": "ec2-18-135-161-3.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.161.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mhnd-EIP"
            },
            "tags_all": {
              "Name": "mhnd-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mhnd-eb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bce41aaa19ffb00",
            "arn": "arn:aws:ec2:eu-west-2:252530817577:elastic-ip/eipalloc-00bce41aaa19ffb00",
            "association_id": "eipassoc-0cc058689267f2df7",
            "domain": "vpc",
            "id": "eipalloc-00bce41aaa19ffb00",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-00d9b282553bedaa1",
            "private_dns": "ip-10-0-20-132.eu-west-2.compute.internal",
            "private_ip": "10.0.20.132",
            "public_dns": "ec2-18-133-206-220.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.206.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mhnd-EIP"
            },
            "tags_all": {
              "Name": "mhnd-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-008ea0202116dbc56",
            "arn": "arn:aws:ec2:eu-west-2:252530817577:instance/i-0791e8b62a512cb0f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0791e8b62a512cb0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mhndkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-011188f9d9cefdba9",
            "private_dns": "ip-10-0-100-185.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d9fe0ebf2ecb7b81",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037d427feb7ba5800",
            "tags": {
              "Name": "dolfined-instance1"
            },
            "tags_all": {
              "Name": "dolfined-instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-009092ec981be867d"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_SSH_HTTP",
            "aws_subnet.private1",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-008ea0202116dbc56",
            "arn": "arn:aws:ec2:eu-west-2:252530817577:instance/i-047e39e5ccfa2b93c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047e39e5ccfa2b93c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mhndkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0386a0c93d621c3bb",
            "private_dns": "ip-10-0-200-152.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.200.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01deaf8fe542c7f0c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ce384aae51196d3",
            "tags": {
              "Name": "dolfined-instance2"
            },
            "tags_all": {
              "Name": "dolfined-instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-009092ec981be867d"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_SSH_HTTP",
            "aws_subnet.private2",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mhnd-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:internet-gateway/igw-097aeee800b4a5481",
            "id": "igw-097aeee800b4a5481",
            "owner_id": "252530817577",
            "tags": {
              "Name": "mhnd-IG"
            },
            "tags_all": {
              "Name": "mhnd-IG"
            },
            "vpc_id": "vpc-0f83d6b6b29829467"
          },
          "dependencies": [
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "WebALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:252530817577:loadbalancer/app/Alb-tf/aeb17a3cac25e01b",
            "arn_suffix": "app/Alb-tf/aeb17a3cac25e01b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Alb-tf-299367348.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:252530817577:loadbalancer/app/Alb-tf/aeb17a3cac25e01b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Alb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-047b32c42df1bfd3d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b3a051343720642f"
              },
              {
                "subnet_id": "subnet-0b4bd5bc024bba188"
              }
            ],
            "subnets": [
              "subnet-0b3a051343720642f",
              "subnet-0b4bd5bc024bba188"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0f83d6b6b29829467",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.allow_HTTP",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:252530817577:listener/app/Alb-tf/aeb17a3cac25e01b/93f8c8867d0f737d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:252530817577:targetgroup/lb-tg/1cc51b271af1f825",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:252530817577:listener/app/Alb-tf/aeb17a3cac25e01b/93f8c8867d0f737d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:252530817577:loadbalancer/app/Alb-tf/aeb17a3cac25e01b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.WebALB",
            "aws_lb_target_group.WebTG",
            "aws_security_group.allow_HTTP",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "WebTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:252530817577:targetgroup/lb-tg/1cc51b271af1f825",
            "arn_suffix": "targetgroup/lb-tg/1cc51b271af1f825",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:252530817577:targetgroup/lb-tg/1cc51b271af1f825",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:252530817577:loadbalancer/app/Alb-tf/aeb17a3cac25e01b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f83d6b6b29829467"
          },
          "dependencies": [
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:252530817577:targetgroup/lb-tg/1cc51b271af1f825-20240525190255960500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:252530817577:targetgroup/lb-tg/1cc51b271af1f825",
            "target_id": "i-0791e8b62a512cb0f"
          },
          "dependencies": [
            "aws_instance.terraform-web1",
            "aws_lb_target_group.WebTG",
            "aws_security_group.allow_SSH_HTTP",
            "aws_subnet.private1",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:252530817577:targetgroup/lb-tg/1cc51b271af1f825-20240525190255997600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:252530817577:targetgroup/lb-tg/1cc51b271af1f825",
            "target_id": "i-047e39e5ccfa2b93c"
          },
          "dependencies": [
            "aws_instance.terraform-web2",
            "aws_lb_target_group.WebTG",
            "aws_security_group.allow_SSH_HTTP",
            "aws_subnet.private2",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mhnd-natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094c17331b2534001",
            "association_id": "eipassoc-06f8cd03ccd20b348",
            "connectivity_type": "public",
            "id": "nat-0df6b50c00a1491b4",
            "network_interface_id": "eni-05eeef2a891618c4b",
            "private_ip": "10.0.10.32",
            "public_ip": "18.135.161.3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b3a051343720642f",
            "tags": {
              "Name": "MHND GW NAT"
            },
            "tags_all": {
              "Name": "MHND GW NAT"
            }
          },
          "dependencies": [
            "aws_eip.mhnd-eb1",
            "aws_subnet.public1",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mhnd-natgw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bce41aaa19ffb00",
            "association_id": "eipassoc-0cc058689267f2df7",
            "connectivity_type": "public",
            "id": "nat-04f09fb1fcb28c134",
            "network_interface_id": "eni-00d9b282553bedaa1",
            "private_ip": "10.0.20.132",
            "public_ip": "18.133.206.220",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b4bd5bc024bba188",
            "tags": {
              "Name": "MHND GW NAT"
            },
            "tags_all": {
              "Name": "MHND GW NAT"
            }
          },
          "dependencies": [
            "aws_eip.mhnd-eb2",
            "aws_subnet.public2",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:route-table/rtb-04a969768a4558b75",
            "id": "rtb-04a969768a4558b75",
            "owner_id": "252530817577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0df6b50c00a1491b4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouting"
            },
            "tags_all": {
              "Name": "PrivateRouting"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f83d6b6b29829467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.mhnd-eb1",
            "aws_nat_gateway.mhnd-natgw1",
            "aws_subnet.public1",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:route-table/rtb-0fc53c06173193feb",
            "id": "rtb-0fc53c06173193feb",
            "owner_id": "252530817577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04f09fb1fcb28c134",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouting"
            },
            "tags_all": {
              "Name": "PrivateRouting"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f83d6b6b29829467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.mhnd-eb2",
            "aws_nat_gateway.mhnd-natgw2",
            "aws_subnet.public2",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:route-table/rtb-0b10c7aff1f9d1c3f",
            "id": "rtb-0b10c7aff1f9d1c3f",
            "owner_id": "252530817577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097aeee800b4a5481",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRountig"
            },
            "tags_all": {
              "Name": "publicRountig"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f83d6b6b29829467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mhnd-gw",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:route-table/rtb-0aacb86b7238f000e",
            "id": "rtb-0aacb86b7238f000e",
            "owner_id": "252530817577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097aeee800b4a5481",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRountig"
            },
            "tags_all": {
              "Name": "publicRountig"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f83d6b6b29829467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mhnd-gw",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0303edc4ba2b4bd3d",
            "route_table_id": "rtb-04a969768a4558b75",
            "subnet_id": "subnet-037d427feb7ba5800"
          },
          "dependencies": [
            "aws_eip.mhnd-eb1",
            "aws_nat_gateway.mhnd-natgw1",
            "aws_route_table.private1-rt",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067861c19dec6d409",
            "route_table_id": "rtb-0fc53c06173193feb",
            "subnet_id": "subnet-07ce384aae51196d3"
          },
          "dependencies": [
            "aws_eip.mhnd-eb2",
            "aws_nat_gateway.mhnd-natgw2",
            "aws_route_table.private2-rt",
            "aws_subnet.private2",
            "aws_subnet.public2",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01711084ff1251cc0",
            "route_table_id": "rtb-0b10c7aff1f9d1c3f",
            "subnet_id": "subnet-0b3a051343720642f"
          },
          "dependencies": [
            "aws_internet_gateway.mhnd-gw",
            "aws_route_table.public1-rt",
            "aws_subnet.public1",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076ccbc4e32058f0e",
            "route_table_id": "rtb-0aacb86b7238f000e",
            "subnet_id": "subnet-0b4bd5bc024bba188"
          },
          "dependencies": [
            "aws_internet_gateway.mhnd-gw",
            "aws_route_table.public2-rt",
            "aws_subnet.public2",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:security-group/sg-047b32c42df1bfd3d",
            "description": "Allow HTTP inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047b32c42df1bfd3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_HTTP",
            "name_prefix": "",
            "owner_id": "252530817577",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f83d6b6b29829467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_SSH_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:security-group/sg-009092ec981be867d",
            "description": "Allow HTTP and SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009092ec981be867d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_SSH_HTTP",
            "name_prefix": "",
            "owner_id": "252530817577",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webSG"
            },
            "tags_all": {
              "Name": "webSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f83d6b6b29829467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:subnet/subnet-037d427feb7ba5800",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037d427feb7ba5800",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252530817577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0f83d6b6b29829467"
          },
          "dependencies": [
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:subnet/subnet-07ce384aae51196d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ce384aae51196d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252530817577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-0f83d6b6b29829467"
          },
          "dependencies": [
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:subnet/subnet-0b3a051343720642f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3a051343720642f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252530817577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0f83d6b6b29829467"
          },
          "dependencies": [
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:subnet/subnet-0b4bd5bc024bba188",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4bd5bc024bba188",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252530817577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-0f83d6b6b29829467"
          },
          "dependencies": [
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mhnd-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:vpc/vpc-0f83d6b6b29829467",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053f1c26d204d6358",
            "default_route_table_id": "rtb-09850518eea65a707",
            "default_security_group_id": "sg-00aa202a9bbf9a625",
            "dhcp_options_id": "dopt-045c39f5e03a41a9b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f83d6b6b29829467",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09850518eea65a707",
            "owner_id": "252530817577",
            "tags": {
              "Name": "mhnd-vpc"
            },
            "tags_all": {
              "Name": "mhnd-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:security-group-rule/sgr-00b7723a0123689c6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00b7723a0123689c6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-047b32c42df1bfd3d",
            "security_group_rule_id": "sgr-00b7723a0123689c6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_HTTP",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_Web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:security-group-rule/sgr-0bf56a6ee81eefbbd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0bf56a6ee81eefbbd",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-009092ec981be867d",
            "security_group_rule_id": "sgr-0bf56a6ee81eefbbd",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_SSH_HTTP",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:security-group-rule/sgr-0055d378b756c9268",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0055d378b756c9268",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-009092ec981be867d",
            "security_group_rule_id": "sgr-0055d378b756c9268",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_SSH_HTTP",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTP_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:security-group-rule/sgr-08ca2e70373a07649",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-08ca2e70373a07649",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-047b32c42df1bfd3d",
            "security_group_rule_id": "sgr-08ca2e70373a07649",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_HTTP",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:252530817577:security-group-rule/sgr-07f5287ecfe9cae8c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07f5287ecfe9cae8c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-009092ec981be867d",
            "security_group_rule_id": "sgr-07f5287ecfe9cae8c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_SSH_HTTP",
            "aws_vpc.mhnd-vpc"
          ]
        }
      ]
    }
  ]
}